<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screen"
    android:paddingLeft="16dp"
    android:paddingTop="100dp"
    android:paddingRight="16dp"
    tools:context=".ui.loginScreen.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/lightYellow"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_deer"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/deer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:text="@string/selamat_datang"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/iv_deer"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/plus_jakarta_sans_regular"
        android:text="@string/deskripsi_masuk"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_deer"
        app:layout_constraintStart_toEndOf="@id/iv_deer"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextField"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_border"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_deer"
        app:startIconDrawable="@drawable/ic_mail">

        <com.example.deerdiary.ui.global.EmailTextField
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextField"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_border"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextField"
        app:passwordToggleDrawable="@drawable/toggle_button"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_key">

        <com.example.deerdiary.ui.global.PasswordTextField
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:hint="@string/password_text"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_primary_background"
        android:elevation="0dp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:text="@string/masuk"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:onClick="onLoginClicked"
        app:layout_constraintTop_toBottomOf="@id/passwordTextField" />

    <TextView
        android:id="@+id/tv_belum_punya_akun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/plus_jakarta_sans_regular"
        android:text="@string/belum_punya_akun"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_secondary_background"
        android:elevation="0dp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:text="@string/daftar"
        android:textAllCaps="false"
        android:textColor="@color/lightYellow"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_belum_punya_akun" />


</androidx.constraintlayout.widget.ConstraintLayout>