<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_setting_2"
        android:iconTint="@color/lightYellow"
        android:title="@string/settings"
        app:showAsAction="ifRoom"
        tools:targetApi="o" />

    <item
        android:id="@+id/location"
        android:icon="@drawable/ic_location"
        android:iconTint="@color/lightYellow"
        android:title="@string/location"
        app:showAsAction="ifRoom"
        tools:targetApi="o"/>
</menu>