<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screen"
    tools:context=".ui.settingScreen.SettingActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ganti_bahasa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/button_secondary_background"
        android:text="@string/ganti_bahasa"
        android:textColor="@color/lightYellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/action_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/warning_button"
        android:text="@string/keluar"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ganti_bahasa" />

</androidx.constraintlayout.widget.ConstraintLayout>