...
                android:id="@+id/fl_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_home"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/deskripsi_konten_gambar_detail"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/image_home" />

...
